[gd_scene load_steps=8 format=3 uid="uid://378bayncw85c"]

[ext_resource type="Script" uid="uid://crpi2ei52olnk" path="res://script/enemies/enemy.gd" id="1_8iec7"]
[ext_resource type="PackedScene" uid="uid://ev5li0poqi0x" path="res://scene/bullet/enemy_bullet_cooldown.tscn" id="2_ym5dk"]
[ext_resource type="Texture2D" uid="uid://bws4wkddkjgs6" path="res://asset/Grease_Rat.png" id="3_6nve7"]
[ext_resource type="Resource" uid="uid://desyy7idd4al" path="res://Resource/cooldown_tower_resource.tres" id="3_ym5dk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qi2p4"]
size = Vector2(12.5, 19.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f87vc"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8u16h"]
bg_color = Color(0, 0.72549, 0, 1)

[node name="Enemy" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_8iec7")
enemy_bullet_scene = ExtResource("2_ym5dk")
nerf_effect_resource = ExtResource("3_ym5dk")

[node name="body" type="Sprite2D" parent="."]
scale = Vector2(0.35, 0.35)
texture = ExtResource("3_6nve7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.75, -0.25)
shape = SubResource("RectangleShape2D_qi2p4")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -13.0
offset_top = -22.0
offset_right = 57.0
offset_bottom = 1.0
scale = Vector2(0.395, 0.395)
theme_override_styles/background = SubResource("StyleBoxFlat_f87vc")
theme_override_styles/fill = SubResource("StyleBoxFlat_8u16h")
value = 100.0
fill_mode = 1
show_percentage = false

[node name="StatusLabel" type="Label" parent="."]
visible = false
offset_left = -21.0
offset_top = -50.0
offset_right = 19.0
offset_bottom = -27.0
text = "freeze"

[node name="TrapStatusLabel" type="Label" parent="."]
offset_left = -21.0
offset_top = -39.0
offset_right = 19.0
offset_bottom = -16.0

[node name="StatusMiss" type="Label" parent="."]
visible = false
offset_left = 12.0
offset_top = -9.0
offset_right = 52.0
offset_bottom = 14.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 40)
offset_left = -25.999998
offset_top = -106.0
offset_right = 14.000002
offset_bottom = -66.0
scale = Vector2(1.3600001, 1.9599993)
